src/App.css
.header{
  background:#141b4D;
  text-align:left;
  padding: 16px 16px;
  margin-bottom:32px;
}
.page-title {
  font-size:10px;
  font-weight:normal;
  color: #ffffff;
}

.logo {
  height: 17px;
  width: 147px;
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-197.1 266.7 241.1 27.9'%3E%3Cpath fill='%23fff' d='M-173.1 294.2l-9.1-6-14 6 8.3-9.7-9.2-6h14.3l9.7-11.4v11.4h13.8l-13.8 5.8'/%3E%3Cpath fill='%23FFF' d='M-155.9 272.7c.5 0 .9-.4.9-.9V268c0-.5-.4-.9-.9-.9h-14.8v5.6h14.8zM-155.9 294.2c.5 0 .9-.4.9-.9v-3.8c0-.5-.4-.9-.9-.9h-14.8v5.6h14.8zM43.1 267.1H24.5c-.5 0-.9.4-.9.9v3.8c0 .5.4.9.9.9H31v20.7c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.8h6.5c.5 0 .9-.4.9-.9V268c-.1-.5-.4-.9-.9-.9zM-30.8 273.2c-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8h-10.1c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-6.5h5.4c1.5 0 2.9-.2 4.1-.8 1.2-.5 2.3-1.3 3.1-2.1.8-.9 1.5-1.9 2-3.1.4-1.1.7-2.6.7-3.9-.1-1.3-.2-2.5-.7-3.7zm-5.2 5.5c-.2.5-.5 1-.8 1.4s-.8.6-1.3.8c-.5.2-1.3.4-3 .4h-4.3v-8.6h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7.1.7 0 1.3-.2 1.8zM-68.7 274.9c0 .5.1.9.4 1.2.2.4.6.7 1 .8.5.2 1 .4 1.7.6.7.2 1.4.3 2.1.4 1.3.2 2.6.5 3.8.8 1.3.3 2.4.8 3.4 1.4 1 .7 1.8 1.5 2.3 2.5.6 1.1.8 2.4.8 4-.1 1.6-.5 2.9-1.2 3.9s-1.6 1.9-2.7 2.5c-1.1.6-2.1 1.1-3.4 1.3-1.3.2-2.7.3-3.9.2-3.1-.1-7.7-1.9-9.9-5-.2-.2-.4-.7.1-1.2s2.8-2.9 2.8-2.9c.5-.5 1-.1 1.1.1 1.3 2 4 3.4 6.1 3.5 1.1.1 1.3 0 1.9-.1.6-.1 1.2-.2 1.7-.5.5-.2.9-.5 1.2-.9.3-.4.5-.9.5-1.5.1-.6-.1-1.1-.4-1.4-.3-.4-.7-.7-1.2-1-.5-.3-1.2-.5-1.9-.6-.7-.1-1.5-.2-2.2-.4-1.2-.2-2.4-.4-3.5-.7-1.2-.4-2.2-.8-3.1-1.4-1-.6-1.7-1.4-2.3-2.4-.5-1-.8-2.2-.8-3.5.1-1.4.4-2.7 1.1-3.8.7-1 1.4-1.9 2.5-2.6 1-.7 2.1-1.1 3.4-1.4 2.5-.5 4.8-.5 7.3.3 2.6.8 4.7 2.8 5.6 4.2.2.2.4.7 0 1.1l-2.7 2.7c-.5.5-1 .4-1.3-.1-1.4-2.1-3.2-3-5.3-3.1-2.4.1-4.9.6-5 3zM-80.3 270.4c-1.3-1.2-2.8-2.1-4.4-2.8-1.7-.6-3.4-1-5.3-1-1.8 0-3.6.3-5.2 1-1.7.6-3.2 1.6-4.4 2.8-1.3 1.2-2.3 2.7-3.1 4.4-.7 1.7-1.1 3.7-1.1 5.9s.4 4.2 1.1 5.9c.7 1.7 1.7 3.2 3 4.4 1.3 1.2 2.8 2.1 4.4 2.8 1.7.6 3.4 1 5.3 1 2 0 3.9-.4 5.6-1s3.2-1.6 4.4-2.9c1.2-1.3 2.2-2.7 2.9-4.4.7-1.7 1-3.6 1-5.6 0-2.2-.4-4.2-1.1-5.9-.8-2-1.8-3.4-3.1-4.6zm-2.2 14.1c-.4 1-1 1.9-1.7 2.6-.7.7-1.6 1.3-2.6 1.6s-2 .5-3.2.5c-1.1 0-2.2-.2-3.2-.5-1-.4-1.8-.9-2.5-1.6-.7-.7-1.3-1.6-1.7-2.6-.4-1.1-.7-2.3-.7-3.7 0-1.4.2-2.7.7-3.7.4-1.1 1-1.9 1.7-2.6.7-.7 1.6-1.3 2.6-1.6 1-.4 2-.5 3.2-.5 1.1 0 2.2.2 3.2.5 1 .4 1.8.9 2.6 1.6.7.7 1.3 1.6 1.7 2.6.4 1.1.7 2.3.7 3.7-.2 1.3-.4 2.6-.8 3.7zM-4.8 270.4c-1.3-1.2-2.8-2.1-4.4-2.8-1.7-.6-3.4-1-5.3-1-1.8 0-3.6.3-5.2 1-1.7.6-3.2 1.6-4.4 2.8-1.3 1.2-2.3 2.7-3.1 4.4-.7 1.7-1.1 3.7-1.1 5.9s.4 4.2 1.1 5.9c.7 1.7 1.7 3.2 3 4.4 1.3 1.2 2.8 2.1 4.4 2.8 1.7.6 3.4 1 5.3 1 2 0 3.9-.4 5.6-1s3.2-1.6 4.4-2.9c1.2-1.3 2.2-2.7 2.9-4.4.7-1.7 1-3.6 1-5.6 0-2.2-.4-4.2-1.1-5.9-.8-2-1.8-3.4-3.1-4.6zM-7 284.5c-.4 1-1 1.9-1.7 2.6-.7.7-1.6 1.3-2.6 1.6-1 .4-2 .5-3.2.5s-2.2-.2-3.2-.5c-1-.4-1.8-.9-2.5-1.6-.7-.7-1.3-1.6-1.7-2.6-.4-1.1-.7-2.3-.7-3.7 0-1.4.2-2.7.7-3.7.4-1.1 1-1.9 1.7-2.6.7-.7 1.6-1.3 2.6-1.6 1-.4 2-.5 3.2-.5s2.2.2 3.2.5c1 .4 1.8.9 2.6 1.6.7.7 1.3 1.6 1.7 2.6.4 1.1.7 2.3.7 3.7-.1 1.3-.3 2.6-.8 3.7zM-131.6 267.1h-3.8c-.5 0-.9.4-.9.9v16.8c0 .7-.1 1.3-.4 1.9s-.5 1-1 1.3c-.4.4-.9.7-1.5.8-.6.2-1.6.3-2.3.3-.7 0-1.7-.1-2.4-.3-.6-.2-1.1-.5-1.6-.8-.4-.4-.7-.8-1-1.3s-.4-1.1-.4-1.9V268c0-.5-.4-.9-.9-.9h-3.8c-.5 0-.9.4-.9.9v16.9c0 1.6.3 2.9.8 4.1.6 1.2 1.4 2.2 2.4 3.1s2.2 1.5 3.5 1.9c1.3.4 2.7.6 4.1.6s2.8-.2 4.1-.6c1.3-.4 2.5-1.1 3.4-1.9 1-.8 1.7-1.9 2.3-3.1.6-1.2.8-2.6.8-4.1V268c.4-.5 0-.9-.5-.9zM-104.8 292.8l-6.2-7.7s5-1.8 5-8.1c0-1.3-.2-2.6-.7-3.8-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8H-126c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.7h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7s-.1 1.2-.3 1.7c-.2.5-.5 1-.8 1.4-.4.4-.8.6-1.3.8-.5.2-1.3.4-3 .4h-2.3s-.8.4-.5 1l8.9 11.6c.2.2.4.4.7.4h4.8c.9.1 1.4-.5.7-1.3zM24 292.8l-6.2-7.7s5-1.8 5-8.1c0-1.3-.2-2.6-.7-3.8-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8h-10c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.7h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7s-.1 1.2-.3 1.7c-.2.5-.5 1-.8 1.4s-.8.6-1.3.8c-.5.2-1.3.4-3 .4H9.5c-.5 0-.8.4-.5 1l8.8 11.6c.2.2.4.4.7.4h4.8c.9.1 1.4-.5.7-1.3z'/%3E%3Cpath fill='%23FFF' d='M-173.1 294.2l-9.1-6-14 6 8.3-9.7-9.2-6h14.3l9.7-11.4v11.4h13.8l-13.8 5.8'/%3E%3Cpath fill='%23FFF' d='M-155.9 272.7c.5 0 .9-.4.9-.9V268c0-.5-.4-.9-.9-.9h-14.8v5.6h14.8zM-155.9 294.2c.5 0 .9-.4.9-.9v-3.8c0-.5-.4-.9-.9-.9h-14.8v5.6h14.8zM43.1 267.1H24.5c-.5 0-.9.4-.9.9v3.8c0 .5.4.9.9.9H31v20.7c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.8h6.5c.5 0 .9-.4.9-.9V268c-.1-.5-.4-.9-.9-.9zM-30.8 273.2c-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8h-10.1c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-6.5h5.4c1.5 0 2.9-.2 4.1-.8 1.2-.5 2.3-1.3 3.1-2.1.8-.9 1.5-1.9 2-3.1.4-1.1.7-2.6.7-3.9-.1-1.3-.2-2.5-.7-3.7zm-5.2 5.5c-.2.5-.5 1-.8 1.4s-.8.6-1.3.8c-.5.2-1.3.4-3 .4h-4.3v-8.6h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7.1.7 0 1.3-.2 1.8zM-68.7 274.9c0 .5.1.9.4 1.2.2.4.6.7 1 .8.5.2 1 .4 1.7.6.7.2 1.4.3 2.1.4 1.3.2 2.6.5 3.8.8 1.3.3 2.4.8 3.4 1.4 1 .7 1.8 1.5 2.3 2.5.6 1.1.8 2.4.8 4-.1 1.6-.5 2.9-1.2 3.9s-1.6 1.9-2.7 2.5c-1.1.6-2.1 1.1-3.4 1.3-1.3.2-2.7.3-3.9.2-3.1-.1-7.7-1.9-9.9-5-.2-.2-.4-.7.1-1.2s2.8-2.9 2.8-2.9c.5-.5 1-.1 1.1.1 1.3 2 4 3.4 6.1 3.5 1.1.1 1.3 0 1.9-.1.6-.1 1.2-.2 1.7-.5.5-.2.9-.5 1.2-.9.3-.4.5-.9.5-1.5.1-.6-.1-1.1-.4-1.4-.3-.4-.7-.7-1.2-1-.5-.3-1.2-.5-1.9-.6-.7-.1-1.5-.2-2.2-.4-1.2-.2-2.4-.4-3.5-.7-1.2-.4-2.2-.8-3.1-1.4-1-.6-1.7-1.4-2.3-2.4-.5-1-.8-2.2-.8-3.5.1-1.4.4-2.7 1.1-3.8.7-1 1.4-1.9 2.5-2.6 1-.7 2.1-1.1 3.4-1.4 2.5-.5 4.8-.5 7.3.3 2.6.8 4.7 2.8 5.6 4.2.2.2.4.7 0 1.1l-2.7 2.7c-.5.5-1 .4-1.3-.1-1.4-2.1-3.2-3-5.3-3.1-2.4.1-4.9.6-5 3zM-80.3 270.4c-1.3-1.2-2.8-2.1-4.4-2.8-1.7-.6-3.4-1-5.3-1-1.8 0-3.6.3-5.2 1-1.7.6-3.2 1.6-4.4 2.8-1.3 1.2-2.3 2.7-3.1 4.4-.7 1.7-1.1 3.7-1.1 5.9s.4 4.2 1.1 5.9c.7 1.7 1.7 3.2 3 4.4 1.3 1.2 2.8 2.1 4.4 2.8 1.7.6 3.4 1 5.3 1 2 0 3.9-.4 5.6-1s3.2-1.6 4.4-2.9c1.2-1.3 2.2-2.7 2.9-4.4.7-1.7 1-3.6 1-5.6 0-2.2-.4-4.2-1.1-5.9-.8-2-1.8-3.4-3.1-4.6zm-2.2 14.1c-.4 1-1 1.9-1.7 2.6-.7.7-1.6 1.3-2.6 1.6s-2 .5-3.2.5c-1.1 0-2.2-.2-3.2-.5-1-.4-1.8-.9-2.5-1.6-.7-.7-1.3-1.6-1.7-2.6-.4-1.1-.7-2.3-.7-3.7 0-1.4.2-2.7.7-3.7.4-1.1 1-1.9 1.7-2.6.7-.7 1.6-1.3 2.6-1.6 1-.4 2-.5 3.2-.5 1.1 0 2.2.2 3.2.5 1 .4 1.8.9 2.6 1.6.7.7 1.3 1.6 1.7 2.6.4 1.1.7 2.3.7 3.7-.2 1.3-.4 2.6-.8 3.7zM-4.8 270.4c-1.3-1.2-2.8-2.1-4.4-2.8-1.7-.6-3.4-1-5.3-1-1.8 0-3.6.3-5.2 1-1.7.6-3.2 1.6-4.4 2.8-1.3 1.2-2.3 2.7-3.1 4.4-.7 1.7-1.1 3.7-1.1 5.9s.4 4.2 1.1 5.9c.7 1.7 1.7 3.2 3 4.4 1.3 1.2 2.8 2.1 4.4 2.8 1.7.6 3.4 1 5.3 1 2 0 3.9-.4 5.6-1s3.2-1.6 4.4-2.9c1.2-1.3 2.2-2.7 2.9-4.4.7-1.7 1-3.6 1-5.6 0-2.2-.4-4.2-1.1-5.9-.8-2-1.8-3.4-3.1-4.6zM-7 284.5c-.4 1-1 1.9-1.7 2.6-.7.7-1.6 1.3-2.6 1.6-1 .4-2 .5-3.2.5s-2.2-.2-3.2-.5c-1-.4-1.8-.9-2.5-1.6-.7-.7-1.3-1.6-1.7-2.6-.4-1.1-.7-2.3-.7-3.7 0-1.4.2-2.7.7-3.7.4-1.1 1-1.9 1.7-2.6.7-.7 1.6-1.3 2.6-1.6 1-.4 2-.5 3.2-.5s2.2.2 3.2.5c1 .4 1.8.9 2.6 1.6.7.7 1.3 1.6 1.7 2.6.4 1.1.7 2.3.7 3.7-.1 1.3-.3 2.6-.8 3.7zM-131.6 267.1h-3.8c-.5 0-.9.4-.9.9v16.8c0 .7-.1 1.3-.4 1.9s-.5 1-1 1.3c-.4.4-.9.7-1.5.8-.6.2-1.6.3-2.3.3-.7 0-1.7-.1-2.4-.3-.6-.2-1.1-.5-1.6-.8-.4-.4-.7-.8-1-1.3s-.4-1.1-.4-1.9V268c0-.5-.4-.9-.9-.9h-3.8c-.5 0-.9.4-.9.9v16.9c0 1.6.3 2.9.8 4.1.6 1.2 1.4 2.2 2.4 3.1s2.2 1.5 3.5 1.9c1.3.4 2.7.6 4.1.6s2.8-.2 4.1-.6c1.3-.4 2.5-1.1 3.4-1.9 1-.8 1.7-1.9 2.3-3.1.6-1.2.8-2.6.8-4.1V268c.4-.5 0-.9-.5-.9zM-104.8 292.8l-6.2-7.7s5-1.8 5-8.1c0-1.3-.2-2.6-.7-3.8-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8H-126c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.7h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7s-.1 1.2-.3 1.7c-.2.5-.5 1-.8 1.4-.4.4-.8.6-1.3.8-.5.2-1.3.4-3 .4h-2.3s-.8.4-.5 1l8.9 11.6c.2.2.4.4.7.4h4.8c.9.1 1.4-.5.7-1.3zM24 292.8l-6.2-7.7s5-1.8 5-8.1c0-1.3-.2-2.6-.7-3.8-.4-1.2-1.1-2.3-2-3.2-.8-.9-1.9-1.6-3.1-2.2-1.2-.5-2.6-.8-4.1-.8h-10c-.5 0-.9.4-.9.9v25.4c0 .5.4.9.9.9h3.8c.5 0 .9-.4.9-.9v-20.7h5.6c.6 0 1.1.1 1.6.3.5.2.9.5 1.3.9s.6.8.8 1.3c.2.5.3 1.1.3 1.7s-.1 1.2-.3 1.7c-.2.5-.5 1-.8 1.4s-.8.6-1.3.8c-.5.2-1.3.4-3 .4H9.5c-.5 0-.8.4-.5 1l8.8 11.6c.2.2.4.4.7.4h4.8c.9.1 1.4-.5.7-1.3z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  background-position: 0% 0%;
  background-position: 50% 50%
  }
.versus-title {
  display:flex;
  font-size:1.5em;
  margin:0 auto;
  width:70%;
  justify-content: center;
  color:#9c9c9c;
}

.versus-title div:first-child:after {
  content:"vs";
  padding:8px;
  color:#141847;
}

.versus-title {
  width:100%;
  display:block;
  text-align:center;
  margin-bottom:32px;
}

.versus-title div:first-child:after {
  display:block;
}

@media only screen and (min-width: 600px) {

  .versus-title {
    display:flex;
    font-size:1.5em;
    margin:0 auto;
    width:70%;
    justify-content: center;
    color:#9c9c9c;
  }

  .versus-title div:first-child:after {
    display:inline;
    content:"vs";
    padding:8px;
    color:#141847;
  }
}
@media only screen and (min-width: 800px) {
  .container {
    margin:0 auto;
    width:70%;
    display:flex;
    position:relative;
  }
}

@media only screen and (min-width: 1000px) {
  .container {
    margin:0 auto;
    width:85%;
    display:flex;
    position:relative;
  }
}

